<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_type" />

    <EditText
        android:id="@+id/editTextProductId"
        android:hint="@string/product_id"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextQuantity"
        android:hint="@string/quantity"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNotes"
        android:hint="@string/notes"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
