<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transactionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/buttonAddTransaction"
            android:layout_width="0dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_transaction" />

        <Button
            android:id="@+id/buttonExportPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginStart="8dp"
            android:text="@string/export_pdf" />

        <Button
            android:id="@+id/buttonExportCsv"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/export_csv" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
